[package]
name = "parcel-trackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide.git", branch = "master", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
scraper = "0.18"
dotenvy = "0.15"
